<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorOnBackground"
    android:minHeight="60dp">

    <io.selimdawa.multicolors.MultiColorButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:layout_marginEnd="10dp"
        app:mc_card_stroke_color="white" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_gravity="end"
        android:layout_marginEnd="15sp"
        android:contentDescription="@string/profile_image"
        android:padding="1dp"
        android:src="@color/image_profile"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle"
        app:strokeColor="?colorError"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/nameSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bad_script"
        android:text="@string/app_name"
        android:textColor="?mc_track"
        android:textSize="21sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/drawer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:contentDescription="@string/open_menu"
        android:src="@drawable/ic_drawer"
        app:tint="?mc_track" />

</com.google.android.material.appbar.MaterialToolbar>