<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="30dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="?mc_bg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/icon" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginBottom="10sp"
            app:cardCornerRadius="24dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?color"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kufi"
                    android:text="@string/app_name"
                    android:textColor="?mc_tick"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5sp"
                    android:fontFamily="@font/kufi"
                    android:text="@string/version"
                    android:textColor="?mc_tick"
                    android:textSize="24sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linear_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?color"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_rate" />

            <TextView
                android:id="@+id/bt_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kufi"
                android:padding="10sp"
                android:text="@string/rate_app"
                android:textColor="?mc_tick"
                android:textSize="24sp" />

        </LinearLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/get_design_info"
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/facebook_design"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/facebook_designer"
                    android:src="@drawable/ic_facebook"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/kufi"
                    android:gravity="center"
                    android:text="@string/about_design"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/get_programmer_info"
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/facebook_programmer"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/facebook_programmer"
                    android:src="@drawable/ic_facebook"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/kufi"
                    android:gravity="center"
                    android:text="@string/about_programmer"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
