<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corner_profile"
    tools:context=".ui.profile.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <FrameLayout
                android:id="@+id/layout_image_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image"
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:background="@color/white"
                    android:contentDescription="@string/profile_image"
                    android:scaleType="centerCrop"
                    android:src="@color/image_profile"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle"
                    app:strokeColor="@color/white"
                    app:strokeWidth="5sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/edit_image_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/button_number"
                    android:backgroundTint="?mc_track"
                    android:contentDescription="@string/edit_profile_image"
                    android:padding="5dp"
                    android:src="@drawable/ic_adds"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle"
                    app:tint="@color/white" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="10sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?colorError"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:fontFamily="sans-serif-medium" />

                <EditText
                    android:id="@+id/nameEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:background="@drawable/button"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="10sp"
                    android:paddingVertical="5sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?colorError"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageEdit"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="15dp"
                        android:background="@drawable/button_number"
                        android:backgroundTint="?mc_track"
                        android:contentDescription="@string/edit_name"
                        android:padding="10dp"
                        android:src="@drawable/ic_edit_white"
                        android:visibility="visible"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle"
                        app:tint="@color/white" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageClose"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="15dp"
                        android:background="@drawable/button_number"
                        android:backgroundTint="?mc_track"
                        android:contentDescription="@string/cancel_edit"
                        android:padding="10dp"
                        android:src="@drawable/ic_close"
                        android:visibility="gone"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle"
                        app:tint="@color/white" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageTrue"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="5sp"
                        android:background="@drawable/button_number"
                        android:backgroundTint="?mc_track"
                        android:contentDescription="@string/save_name"
                        android:padding="10dp"
                        android:src="@drawable/ic_true"
                        android:visibility="gone"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle"
                        app:tint="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:background="@drawable/ic_back_white"
        android:contentDescription="@string/back"
        android:rotation="180"
        app:tint="@color/white" />

</RelativeLayout>