<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_one"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/d"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kufi"
                android:text="@string/range"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="38dp"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="italic" />

        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/user_profile_image"
            android:src="@color/image_profile"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kufi"
                android:text="@string/points"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="38dp"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kufi"
        android:gravity="center"
        android:paddingBottom="5sp"
        android:textColor="@color/white"
        android:textSize="26sp" />

</LinearLayout>