<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="10sp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:elevation="6dp"
        app:cardCornerRadius="6dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:id="@+id/color"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="?mc_bg"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_product"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:contentDescription="@string/product_image"
                    android:src="@color/image_profile"
                    app:layout_constraintDimensionRatio="1:1" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="10dp"
                    app:strokeWidth="0dp">

                    <ImageView
                        android:id="@+id/save"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="left"
                        android:background="?mc_bg"
                        android:contentDescription="@string/save_to_favorites"
                        android:padding="2dp"
                        android:src="@drawable/ic_favorites_unselected" />

                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?mc_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/kufi"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="5sp"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/like"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/like"
                            android:src="@drawable/ic_heart_unselected" />

                        <TextView
                            android:id="@+id/likes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5sp"
                            android:fontFamily="@font/kufi"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                    </LinearLayout>

                    <View
                        android:layout_width="1sp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="5sp"
                            android:fontFamily="@font/kufi"
                            android:gravity="end"
                            android:maxLines="1"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>